--- a/javascript-course/advanced-js/index.html
+++ b/javascript-course/advanced-js/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Section 5: Advanced JavaScript: Objects and Functions</h1>
+        <p>Open the console to see John & friends and Pokemon instances</p>
         <script src="script.js"></script>
     </body>
 </html>
