Add example with arrow function and check scope

--- a/javascript-course/ES6/index.html
+++ b/javascript-course/ES6/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Section 7: Get Ready for the Future: ES6 / ES2015</title>
+        <title>Section 7: Get Ready for ES6 / ES2015</title>
 
         <style>
             .box {
                 width: 180px;
                 padding: 30px;
                 color: #ffffff;
+                letter-spacing: 4px;
                 text-align: center;
                 font-size: 20px;
                 margin-top: 50px;
@@ -23,11 +24,11 @@
     </head>
 
     <body>
-        <h1>Section 7: Get Ready for the Future: ES6 / ES2015</h1>
+        <h1>Section 7: Get Ready for ES6 / ES2015</h1>
 
-        <div class="box green">I'm green!</div>
-        <div class="box blue">I'm blue!</div>
-        <div class="box orange">I'm orange!</div>
+        <div class="box green">I'm green</div>
+        <div class="box blue">I'm blue</div>
+        <div class="box orange">I'm orange</div>
 
         <script src="script.js"></script>
     </body>
