--- a/javascript-course/asynchronous-js/asynchronous.html
+++ b/javascript-course/asynchronous-js/asynchronous.html
@@ -9,7 +9,18 @@
 <body>
     <h1>Asynchronous JavaScript</h1>
     <script>
-        
+
+        const second = () => {
+            setTimeout(() => {
+                console.log('Async, hey there 👋🏼');
+            }, 2000)
+        }
+        const first = () => {
+            console.log('Hey there');
+            second();
+            console.log('The end');
+        }
+        first();
     </script>
 </body>
 </html>
