--- a/javascript-course/asynchronous-js/asynchronous.html
+++ b/javascript-course/asynchronous-js/asynchronous.html
@@ -57,10 +57,24 @@
             }, 1500);
         });
 
+        const getRecipe = recID => {
+            return new Promise((resolve, reject) => {
+                setTimeout((ID) => {
+                    const recipe = { title: 'Fresh tomato pasta', publisher: 'Jacob' };
+                    resolve(`${ID}: ${recipe.title}`);
+                }, 1500, recID);
+            })
+        }
+
+
         // Promised object getIDs has the `.then` method with the param which contains the values of the resolved method or fulfilled promise!
         getIDs
         .then(IDs => {
             console.log(IDs);
+            return getRecipe(IDs[2]);
+        })
+        .then(recipe => {
+            console.log(recipe);
         })
         .catch(error => {
             console.log('Error! Please check code and try again'); // logs any rejected promises
