Log async function to console

--- a/javascript-course/asynchronous-js/asynchronous.html
+++ b/javascript-course/asynchronous-js/asynchronous.html
@@ -102,9 +102,9 @@
 
         async function getRecipesAW() {
             const IDs =  await getIDs;
+            console.log(IDs);
         }
         getRecipesAW();
-
 
     </script>
 </body>
