--- a/javascript-course/asynchronous-js/asynchronous.html
+++ b/javascript-course/asynchronous-js/asynchronous.html
@@ -103,6 +103,12 @@
         async function getRecipesAW() {
             const IDs =  await getIDs;
             console.log(IDs);
+
+            const recipe = await getRecipe(IDs[2]);
+            console.log(recipe);
+
+            const related = await getRelated('Jacob');
+            console.log(related);
         }
         getRecipesAW();
 
