Add .then to bind async function and consume it. Add notes too

--- a/javascript-course/asynchronous-js/asynchronous.html
+++ b/javascript-course/asynchronous-js/asynchronous.html
@@ -109,8 +109,10 @@
 
             const related = await getRelated('Jacob');
             console.log(related);
+
+            return recipe;
         }
-        getRecipesAW();
+        getRecipesAW().then(result => console.log(`${result} is the best 🍝`));
 
     </script>
 </body>
