Add fetch with CORS proxy bypass

--- a/javascript-course/asynchronous-js/asynchronous.html
+++ b/javascript-course/asynchronous-js/asynchronous.html
@@ -100,6 +100,7 @@
         });
         */
 
+        /*
         async function getRecipesAW() {
             const IDs =  await getIDs;
             console.log(IDs);
@@ -112,8 +113,12 @@
 
             return recipe;
         }
-        getRecipesAW().then(result => console.log(`${result} is the best 🍝`));
+        getRecipesAW().then(result => console.log(`${result} - is the best 🍝`));
+        */
+
+        fetch('https://crossorigin.me/https://www.metaweather.com/api/location/2487956/');
 
     </script>
 </body>
 </html>
+
